--- a/presentation/example.tex
+++ b/presentation/example.tex
@@ -1,29 +1,35 @@
 $$
 \begin{aligned}
-\text{fless} :& \tau_{0} = \text{\bf ref}(\_ \times \text{\bf lam}(\alpha_1, \alpha_2)(\alpha_3))\\
-\text{and}   :& \tau_{1} = \text{\bf ref}(\_ \times \text{\bf lam}(\alpha_4, \alpha_5)(\alpha_6))\\
-\text{lessa} :& \tau_{2} = \text{\bf ref}(\alpha_7) \\
-\text{lessb} :& \tau_{3} = \text{\bf ref}(\alpha_8) \\
-\text{res}   :& \tau_{4} = \text{\bf ref}(\alpha_9) \\
-\text{less}  :& \tau_{5} = \text{\bf ref}(\_ \times \text{\bf lam}(\alpha_7, \alpha_8)(\alpha_9)) \\
-             & \tau_1 \sim \gamma_{10}\\
-             & \tau_2 \sim \gamma_{11}\\
-\text{tmp0} :& \tau_5 = \text{\bf ref}(\gamma_{12}) \qquad \text{\it // \ldots fless(a,b)}\\
-             & \tau_1 \sim \gamma_{20}\\
-             & \tau_2 \sim \gamma_{21}\\
-\text{tmp1} :& \tau_6 = \text{\bf ref}(\gamma_{22}) \qquad \text{\it // \ldots feq(a,b)} \\
-             & \tau_1 \sim \gamma_{30}\\
-             & \tau_2 \sim \gamma_{31}\\
-\text{tmp2} :& \tau_7 = \text{\bf ref}(\gamma_{32}) \qquad \text{\it // \ldots fless(a,b)}\\
-             & \tau_6 \sim \gamma_{40}\\
-             & \tau_7 \sim \gamma_{41}\\
-\text{tmp3} :& \tau_8 = \text{\bf ref}(\gamma_{42}) \qquad \text{\it // \ldots and(tmp1,tmp2)}\\
-             & \tau_5 \sim \gamma_{50}\\
-             & \tau_8 \sim \gamma_{51}\\
-             & \tau_3 \sim \gamma_{52} \qquad \text{\it // \ldots or(tmp0,tmp3)}\\
-\text{sizeA}:& \tau_9 = \text{\bf ref}(\bot \times \bot) \\
-\text{A}    :& \tau_{10} \text{\bf ref}(\text{\bf ref}(\_) \times \_) \\
+\text{fpless}:& \tau_{0} = \text{\bf ref}(\_ \times \text{\bf lam}(\alpha_1, \alpha_2)(\alpha_3))\\
+\text{lessa} :& \tau_{1} = \text{\bf ref}(\alpha_4) \\
+\text{lessb} :& \tau_{2} = \text{\bf ref}(\alpha_5) \\
+\text{res}   :& \tau_{3} = \text{\bf ref}(\alpha_6) = \text{\bf ref}(\bot \times \bot) \\
+\text{less}  :& \tau_{4} = \text{\bf ref}(\_ \times \text{\bf lam}(\alpha_4, \alpha_5)(\alpha_6)) \\
+			  & \alpha_{4} \unlhd \alpha_{1} \\
+			  & \alpha_{5} \unlhd \alpha_{2} \\
+			  & \alpha_{6} \unlhd \alpha_{3} \\
 
+
+
+\text{v00}:   & \tau_{5} = \text{\bf ref}(\bot \times \bot) \\
+\text{v01}:   & \tau_{6} = \text{\bf ref}(\bot \times \bot) \\
+\text{A}     :& \tau_{10} = \text{\bf ref}(\text{\bf ref}(\_) \times \_) \\
+\text{A}     :& \tau_{10} = \text{\bf ref}(\tau_{5} \times \_) \\
+\text{B}     :& \tau_{11} = \tau_{6} \\
+\text{A0}    :& \tau_{12} = \tau_{5} \\
+\text{pA0}   :& \tau_{13} = \text{\bf ref}(\tau_{5} \times \_) \\
+\text{pB}    :& \tau_{14} = \text{\bf ref}(\tau_{6} \times \_) \\
+			  & \tau_{5} \unlhd \alpha_{4} \\
+			  & \tau_{6} \unlhd \alpha_{5} \\
+\text{g}     :& \tau_{15} = \text{\bf ref}(\bot \times \bot) \\
+\text{pC}    :& \tau_{16} = \text{\bf ref}(\tau_{5} \times \_) \\
+\text{pC}    :& \tau_{16} = \text{\bf ref}(\tau_{6} \times \_) \\
+			  & \tau_{5} = \tau_{6} \\
+			  & \tau_{6} = \alpha_{4} \\
+			  & \tau_{5} = \alpha_{5} \\
+\text{g}     :& \tau_{15} = \text{\bf ref}(\bot \times \bot)
 
 \end{aligned}
 $$
+
+$$\begin{aligned}  \text{v00}:   & \tau_{5} = \text{\bf ref}(\bot \times \bot) \\ \text{v01}:   & \tau_{6} = \text{\bf ref}(\bot \times \bot) \\   \text{A}     :& \tau_{10} = \text{\bf ref}(\text{\bf ref}(\_) \times \_) \\  \text{A}     :& \tau_{10} = \text{\bf ref}(\tau_{5} \times \_) \\  \text{B}     :& \tau_{11} = \tau_{6} \\ \text{A0}    :& \tau_{12} = \tau_{5} \\ \text{pA0}   :& \tau_{13} = \text{\bf ref}(\tau_{5} \times \_) \\ \text{pB}    :& \tau_{14} = \text{\bf ref}(\tau_{6} \times \_) \\ & \tau_{5} \unlhd \alpha_{4} \\ & \tau_{6} \unlhd \alpha_{5} \\ \text{g}     :& \tau_{15} = \text{\bf ref}(\bot \times \bot) \\ \text{pC}    :& \tau_{16} = \text{\bf ref}(\tau_{5} \times \_) \\ \text{pC}    :& \tau_{16} = \text{\bf ref}(\tau_{6} \times \_) \\ & \tau_{5} = \tau_{6} \\ & \tau_{6} = \alpha_{4} \\ & \tau_{5} = \alpha_{5} \\ \text{g}     :& \tau_{15} = \text{\bf ref}(\bot \times \bot) \end{aligned}$$
